[gd_scene load_steps=15 format=2]

[ext_resource path="res://tilesets/tiles.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Powerup.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/Checkpoint.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/Key.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Collectible.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=10]
[ext_resource path="res://objects/Duck.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/HUD.tscn" type="PackedScene" id=12]
[ext_resource path="res://sounds/item_get.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/key.wav" type="AudioStream" id=14]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -524349, 10, 0, -458813, 10, 0, -393277, 10, 0, -327741, 10, 0, -262205, 10, 0, -196669, 10, 0, -262088, 8, 0, -131133, 10, 0, -196552, 8, 0, -65597, 10, 0, -131070, 1, 0, -131016, 8, 0, -61, 10, 0, -40, 1, 0, -39, 1, 0, -38, 1, 0, -37, 1, 0, -36, 1, 0, -35, 1, 0, -34, 1, 0, -33, 1, 0, -32, 1, 0, -31, 1, 0, -30, 1, 0, -29, 1, 0, -28, 1, 0, -27, 1, 0, -26, 1, 0, -25, 1, 0, -24, 1, 0, -23, 1, 0, -22, 1, 0, -21, 1, 0, -20, 1, 0, -19, 1, 0, -18, 1, 0, -17, 1, 0, -16, 1, 0, -15, 1, 0, -14, 1, 0, -13, 1, 0, -12, 1, 0, -11, 1, 0, -10, 1, 0, -9, 1, 0, -8, 1, 0, -7, 1, 0, -6, 1, 0, -5, 1, 0, -4, 1, 0, -3, 1, 0, -2, 1, 0, -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65480, 8, 0, 65475, 10, 0, 65497, 536870917, 0, 65509, 6, 0, 65524, 6, 0, 65530, 10, 0, 56, 8, 0, 131011, 10, 0, 131033, 536870917, 0, 131045, 9, 0, 131060, 6, 0, 65592, 8, 0, 196547, 10, 0, 196566, 10, 0, 196569, 536870917, 0, 196585, 9, 0, 196586, -1610612731, 0, 196587, -1610612731, 0, 196588, 9, 0, 196596, 6, 0, 196605, 9, 0, 196606, -1610612731, 0, 196607, -1610612731, 0, 131072, -1610612731, 0, 131073, -1610612731, 0, 131074, -1610612731, 0, 131075, -1610612730, 0, 131076, -1610612730, 0, 131077, -1610612730, 0, 131078, -1610612730, 0, 131120, 0, 0, 131123, 1073741834, 0, 131129, 8, 0, 262083, 10, 0, 262105, 536870917, 0, 262111, 6, 0, 262121, 5, 0, 262124, 536870917, 0, 262132, 9, 0, 262141, 5, 0, 196610, 536870917, 0, 196611, -1610612730, 0, 196665, 8, 0, 327619, 10, 0, 327641, 536870917, 0, 327647, 6, 0, 327657, 5, 0, 327660, 536870917, 0, 327665, 10, 0, 327671, 10, 0, 327677, 5, 0, 262146, 536870917, 0, 262189, 1073741834, 0, 262201, 8, 0, 393155, 10, 0, 393172, 10, 0, 393177, 536870917, 0, 393183, 6, 0, 393187, 2, 0, 393190, 2, 0, 393193, 5, 0, 393196, 536870917, 0, 393199, 10, 0, 393210, 5, 0, 327682, 536870917, 0, 327693, 10, 0, 327738, 8, 0, 458691, 10, 0, 458713, 536870917, 0, 458718, 2, 0, 458720, 2, 0, 458721, 2, 0, 458722, 2, 0, 458723, 1073741826, 0, 458724, 1073741826, 0, 458725, 1073741826, 0, 458726, 1073741826, 0, 458727, 2, 0, 458728, 2, 0, 458732, 536870917, 0, 458744, 10, 0, 458745, 10, 0, 458746, 5, 0, 393218, 536870917, 0, 393264, 10, 0, 393267, 0, 0, 393274, 8, 0, 524227, 10, 0, 524234, 1, 0, 524235, 1, 0, 524236, 1, 0, 524237, 1, 0, 524238, 1, 0, 524239, 1, 0, 524240, 1, 0, 524241, 1, 0, 524249, 536870917, 0, 524254, 1073741826, 0, 524255, 1073741826, 0, 524256, 1073741826, 0, 524257, 1073741826, 0, 524258, 1073741826, 0, 524263, 5, 0, 524268, 536870917, 0, 524282, 5, 0, 458754, 536870917, 0, 458768, 3, 0, 458769, 3, 0, 458781, 0, 0, 458782, 0, 0, 458808, 0, 0, 458810, 8, 0, 589763, 10, 0, 589766, 1, 0, 589767, 1, 0, 589768, 1, 0, 589769, 1, 0, 589778, 1, 0, 589779, 1, 0, 589780, 1, 0, 589781, 1, 0, 589785, 536870917, 0, 589799, 5, 0, 589804, 536870917, 0, 589818, 5, 0, 524290, 536870917, 0, 524304, -1610612732, 0, 524305, 1610612740, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524322, 0, 0, 524323, 0, 0, 524344, 0, 0, 524346, 8, 0, 655299, 10, 0, 655300, 1, 0, 655301, 1, 0, 655318, 1, 0, 655319, 1, 0, 655321, 536870917, 0, 655335, 5, 0, 655341, 10, 0, 655345, 10, 0, 655348, 10, 0, 655351, 10, 0, 655354, 5, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, -1073741820, 0, 589841, -2147483644, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589862, 9, 0, 589863, -1610612731, 0, 589864, -1610612731, 0, 589865, -1610612731, 0, 589866, -1610612731, 0, 589867, -1610612731, 0, 589868, -1610612731, 0, 589869, -1610612731, 0, 589870, -1610612731, 0, 589871, -1610612731, 0, 589872, -1610612731, 0, 589873, -1610612731, 0, 589874, -1610612731, 0, 589875, -1610612731, 0, 589876, -1610612731, 0, 589877, -1610612731, 0, 589878, -1610612731, 0, 589879, -1610612731, 0, 589880, -1610612731, 0, 589881, -1610612731, 0, 589882, 8, 0, 720835, 10, 0, 720857, 536870917, 0, 720862, -1610612731, 0, 720863, -1610612731, 0, 720864, -1610612731, 0, 720865, -1610612731, 0, 720866, -1610612731, 0, 720867, -1610612731, 0, 720868, -1610612731, 0, 720869, -1610612731, 0, 720870, -1610612731, 0, 720877, 6, 0, 720881, 6, 0, 720884, -1610612730, 0, 720885, -1610612730, 0, 720886, -1610612730, 0, 720887, -1610612730, 0, 720888, -1610612730, 0, 720889, -1610612730, 0, 655376, -1073741820, 0, 655377, -1610612732, 0, 655382, 536870920, 0, 655398, 5, 0, 786393, 536870917, 0, 786398, -536870907, 0, 786399, -536870907, 0, 786400, -536870907, 0, 786401, -536870907, 0, 786402, -536870907, 0, 786403, -536870907, 0, 786404, -536870907, 0, 786405, -536870907, 0, 786406, -536870907, 0, 786407, -536870907, 0, 786408, -536870907, 0, 786409, -536870907, 0, 786410, -536870907, 0, 786411, -536870907, 0, 786412, -536870907, 0, 786413, -536870907, 0, 786414, -536870907, 0, 786415, -536870907, 0, 786416, -536870907, 0, 786417, -536870907, 0, 786418, -536870907, 0, 786419, -536870907, 0, 786420, -536870907, 0, 786421, -536870907, 0, 786422, -536870907, 0, 786423, -536870907, 0, 786424, -536870907, 0, 786425, -536870907, 0, 786426, -536870907, 0, 786427, -536870907, 0, 786428, -536870907, 0, 786429, -536870907, 0, 786430, -536870907, 0, 786431, -536870907, 0, 720918, 536870920, 0, 720934, 5, 0, 720940, -536870904, 0, 720941, -1073741819, 0, 720942, -1073741819, 0, 720943, -1073741819, 0, 720944, -1073741819, 0, 720945, -1073741819, 0, 720946, -1073741819, 0, 720947, -1073741819, 0, 720948, -1073741819, 0, 720949, -1073741819, 0, 720950, -1073741819, 0, 720951, -1073741816, 0, 851929, 536870917, 0, 851942, 6, 0, 851967, 8, 0, 786434, 1073741825, 0, 786435, 1073741825, 0, 786436, 1073741825, 0, 786437, 1073741825, 0, 786442, 1073741825, 0, 786443, 1073741825, 0, 786444, 1073741825, 0, 786445, 1073741825, 0, 786450, 1073741825, 0, 786451, 1073741825, 0, 786452, 1073741825, 0, 786453, 1073741825, 0, 786454, 1073741825, 0, 786469, 10, 0, 786470, 5, 0, 786476, 536870917, 0, 786487, 5, 0, 917465, 536870917, 0, 917503, 8, 0, 851969, -1610612735, 0, 851974, 1073741825, 0, 851975, 1073741825, 0, 851976, 1073741825, 0, 851977, 1073741825, 0, 851982, 1073741825, 0, 851983, 1073741825, 0, 851984, 1073741825, 0, 851985, 1073741825, 0, 852006, 9, 0, 852007, -1073741819, 0, 852008, -1073741819, 0, 852009, -1073741819, 0, 852010, -1073741819, 0, 852011, -1073741819, 0, 852012, 9, 0, 852023, 9, 0, 852024, -1073741819, 0, 852025, -1073741819, 0, 852026, -1073741819, 0, 852027, -1073741819, 0, 983001, 536870917, 0, 983002, -1073741818, 0, 983003, -1073741818, 0, 983004, 10, 0, 983008, -1073741818, 0, 983009, -1073741818, 0, 983010, -1073741818, 0, 983018, -1610612731, 0, 983019, -1610612731, 0, 983020, -1610612731, 0, 983021, -1610612731, 0, 983038, -1610612731, 0, 983039, -1610612731, 0, 917505, -1610612735, 0, 917511, 0, 0, 917512, 0, 0, 917530, 9, 0, 917531, -2147483643, 0, 917532, -2147483643, 0, 917533, -2147483643, 0, 917534, -2147483643, 0, 917535, -2147483643, 0, 917536, -2147483643, 0, 917537, 9, 0, 917563, -1073741821, 0, 1048537, 536870917, 0, 1048554, 8, 0, 1048557, 536870920, 0, 1048574, 8, 0, 983041, -1610612735, 0, 983047, 0, 0, 983048, 0, 0, 983066, 5, 0, 983073, 536870917, 0, 983088, 0, 0, 983099, -2147483645, 0, 1114073, 536870917, 0, 1114090, 8, 0, 1114093, 536870920, 0, 1114110, 8, 0, 1048577, -1610612735, 0, 1048583, 0, 0, 1048584, 0, 0, 1048600, 0, 0, 1048602, 5, 0, 1048609, 536870917, 0, 1048635, -1073741821, 0, 1179609, 536870917, 0, 1179615, -1073741814, 0, 1179624, -1073741814, 0, 1179626, 8, 0, 1179629, 536870920, 0, 1179646, 8, 0, 1114113, -1610612735, 0, 1114138, 5, 0, 1114146, 2, 0, 1114147, 2, 0, 1114148, 2, 0, 1114149, 2, 0, 1114150, 2, 0, 1114151, 2, 0, 1114152, 2, 0, 1114153, 2, 0, 1114163, 0, 0, 1114170, 2, 0, 1114171, 2, 0, 1245145, 536870917, 0, 1245162, 8, 0, 1245165, 536870920, 0, 1245182, 8, 0, 1179649, -1610612735, 0, 1179669, 0, 0, 1179674, 5, 0, 1179689, 536870920, 0, 1179706, 8, 0, 1310681, 536870917, 0, 1310694, 6, 0, 1310698, 8, 0, 1310701, 536870920, 0, 1310718, 8, 0, 1245185, -1610612735, 0, 1245189, 0, 0, 1245194, 0, 0, 1245210, 5, 0, 1245225, 536870920, 0, 1245238, 536870915, 0, 1245239, 3, 0, 1245242, 8, 0, 1376218, -1610612731, 0, 1376219, -1610612731, 0, 1376220, -1610612731, 0, 1376221, -1610612731, 0, 1376222, -1610612731, 0, 1376223, -1610612731, 0, 1376224, -1610612731, 0, 1376225, -1610612731, 0, 1376226, -1610612731, 0, 1376227, -1610612731, 0, 1376228, -1610612731, 0, 1376229, -1610612731, 0, 1376230, -1610612731, 0, 1376231, -1610612731, 0, 1376232, -1610612731, 0, 1376233, -1610612731, 0, 1376238, -1610612731, 0, 1376239, -1610612731, 0, 1376252, -1610612731, 0, 1376253, -1610612731, 0, 1310721, -1610612735, 0, 1310722, 0, 0, 1310725, -2147483647, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310746, 5, 0, 1310761, 536870920, 0, 1310763, 3, 0, 1310764, 536870915, 0, 1310774, 1073741828, 0, 1310775, -536870908, 0, 1310778, 8, 0, 1441776, -1610612731, 0, 1441777, -1610612731, 0, 1441778, -1610612731, 0, 1441779, -1610612731, 0, 1441780, -1610612731, 0, 1441781, -1610612731, 0, 1441782, -1610612731, 0, 1441783, -1610612731, 0, 1441784, -1610612731, 0, 1441785, -1610612731, 0, 1441786, -1610612731, 0, 1441787, -1610612731, 0, 1376257, -1610612735, 0, 1376261, -2147483647, 0, 1376298, 2, 0, 1376299, 4, 0, 1376300, -2147483644, 0, 1376301, 2, 0, 1376302, 2, 0, 1376303, 2, 0, 1376304, 2, 0, 1376305, 2, 0, 1376306, 2, 0, 1376307, 2, 0, 1376308, 2, 0, 1376309, 2, 0, 1376310, -1610612732, 0, 1376311, 1610612740, 0, 1376312, 2, 0, 1376313, 2, 0, 1507292, 1073741825, 0, 1507293, 1073741825, 0, 1507294, 1073741825, 0, 1507295, 1073741825, 0, 1507296, 1073741825, 0, 1507297, 1073741825, 0, 1507298, 1073741825, 0, 1507299, 1073741825, 0, 1507300, 1073741825, 0, 1507301, 1073741825, 0, 1507302, 1073741825, 0, 1507303, 1073741825, 0, 1441793, -1610612735, 0, 1441797, -2147483647, 0, 1441815, 1073741825, 0, 1441816, 1073741825, 0, 1441819, 1073741825, 0, 1441820, 1073741825, 0, 1441821, 1073741825, 0, 1441822, 1073741825, 0, 1441823, 1073741825, 0, 1441824, 1073741825, 0, 1441827, 1073741825, 0, 1441828, 1073741825, 0, 1441834, 1073741825, 0, 1441835, 1073741825, 0, 1441836, 1073741825, 0, 1441837, 1073741825, 0, 1441838, 1073741825, 0, 1441839, 1073741825, 0, 1441840, 1073741825, 0, 1441841, 1073741825, 0, 1441842, 1073741825, 0, 1441843, 1073741825, 0, 1441844, 1073741825, 0, 1441845, 1073741825, 0, 1572827, 536870920, 0, 1572840, 1073741825, 0, 1572841, 1073741825, 0, 1507329, -1610612735, 0, 1507332, 0, 0, 1507333, 1073741825, 0, 1507334, 1073741825, 0, 1507335, 1073741825, 0, 1507340, 1073741825, 0, 1507341, 1073741825, 0, 1507342, 1073741825, 0, 1507343, 1073741825, 0, 1507350, 1073741825, 0, 1507353, 1073741825, 0, 1507354, 1073741825, 0, 1507361, 1073741825, 0, 1507362, 1073741825, 0, 1507365, 1073741825, 0, 1507369, 1073741825, 0, 1507382, 1073741825, 0, 1507383, 1073741825, 0, 1507384, 1073741825, 0, 1507385, 1073741825, 0, 1638363, 536870920, 0, 1638378, 1073741825, 0, 1638386, 1073741825, 0, 1638387, 1073741825, 0, 1638388, 1073741825, 0, 1638389, 1073741825, 0, 1638390, 1073741825, 0, 1638391, 1073741825, 0, 1638392, 1073741825, 0, 1638393, 1073741825, 0, 1572865, -1610612735, 0, 1572872, 1073741825, 0, 1572873, 1073741825, 0, 1572874, 1073741825, 0, 1572875, 1073741825, 0, 1572880, 1073741825, 0, 1572881, 1073741825, 0, 1572882, 1073741825, 0, 1572883, 1073741825, 0, 1572884, 1073741825, 0, 1572885, 1073741825, 0, 1572902, 1073741825, 0, 1572903, 1073741825, 0, 1572904, 1073741825, 0, 1572922, -2147483647, 0, 1703896, -1610612731, 0, 1703897, -1610612731, 0, 1703898, -1610612731, 0, 1703899, -1610612730, 0, 1703900, -1610612730, 0, 1703901, -1610612730, 0, 1703902, -1610612730, 0, 1703915, 1073741825, 0, 1703920, 1073741825, 0, 1703921, 1073741825, 0, 1703930, 1073741825, 0, 1703931, 1073741825, 0, 1638401, -1610612735, 0, 1638444, 0, 0, 1638445, 0, 0, 1638446, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638458, -2147483647, 0, 1769434, 536870917, 0, 1769435, -1610612730, 0, 1769452, 0, 0, 1769453, 0, 0, 1769454, 0, 0, 1769455, 0, 0, 1769468, 0, 0, 1769469, 0, 0, 1769470, 0, 0, 1769471, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703938, 0, 0, 1703939, 0, 0, 1703980, 0, 0, 1703984, 0, 0, 1703985, 0, 0, 1703986, 0, 0, 1703987, 0, 0, 1703988, 0, 0, 1703989, 0, 0, 1703994, -2147483647, 0, 1834970, 536870917, 0, 1834981, 10, 0, 1769490, 0, 0, 1769491, 0, 0, 1769492, 0, 0, 1769493, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769520, 0, 0, 1769530, -2147483647, 0, 1900506, 536870917, 0, 1835026, -2147483647, 0, 1835029, -1610612735, 0, 1835034, 9, 0, 1835041, 9, 0, 1835046, -2147483647, 0, 1835049, -1610612735, 0, 1835064, 0, 0, 1835065, 0, 0, 1966042, 536870917, 0, 1966056, 3, 0, 1966057, 3, 0, 1966058, 3, 0, 1966059, 3, 0, 1966060, 0, 0, 1966061, 0, 0, 1966062, 0, 0, 1966063, 0, 0, 1966076, 0, 0, 1966077, 0, 0, 1966078, 0, 0, 1966079, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900546, 0, 0, 1900547, 0, 0, 1900562, -2147483647, 0, 1900565, -1610612735, 0, 1900570, 6, 0, 1900577, 6, 0, 1900582, -2147483647, 0, 1900585, -1610612735, 0, 1900600, -2147483647, 0, 2031578, 536870917, 0, 2031592, -1610612732, 0, 2031593, 1610612740, 0, 2031594, -1610612732, 0, 2031595, 1610612740, 0, 2031600, 1, 0, 2031601, 1, 0, 2031610, 1, 0, 2031611, 1, 0, 1966084, 1, 0, 1966085, 1, 0, 1966094, 1, 0, 1966095, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966102, 0, 0, 1966103, 0, 0, 1966106, 6, 0, 1966107, 0, 0, 1966108, 0, 0, 1966111, 0, 0, 1966112, 0, 0, 1966113, 6, 0, 1966116, 0, 0, 1966117, 0, 0, 1966121, -1610612735, 0, 1966136, -2147483647, 0, 2097115, 1, 0, 2097116, 1, 0, 2097117, 1, 0, 2097118, 1, 0, 2097119, 1, 0, 2097120, 1, 0, 2097121, 1, 0, 2097122, 1, 0, 2097123, 1, 0, 2097124, 1, 0, 2097125, 1, 0, 2097126, 1, 0, 2097127, 1, 0, 2097128, -1073741820, 0, 2097129, -2147483644, 0, 2097130, -1073741820, 0, 2097131, -2147483644, 0, 2097138, 1, 0, 2097139, 1, 0, 2097140, 1, 0, 2097141, 1, 0, 2097142, 1, 0, 2097143, 1, 0, 2097144, 1, 0, 2097145, 1, 0, 2031622, 1, 0, 2031623, 1, 0, 2031624, 1, 0, 2031625, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2031628, 1, 0, 2031629, 1, 0, 2031640, 0, 0, 2031641, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031660, 0, 0, 2031664, 0, 0, 2031667, 0, 0, 2031670, 0, 0, 2031671, 0, 0, 2162664, -1073741820, 0, 2162665, -1610612732, 0, 2162666, -1073741820, 0, 2162667, -1610612732, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2097201, 0, 0, 2097203, 0, 0 )

[node name="TileMap_Spikes" type="TileMap" parent="." groups=[
"spikes",
]]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( 65498, -1610612725, 0, 65506, 1073741835, 0, 131034, -1610612725, 0, 131046, -1610612725, 0, 196575, 11, 0, 196659, 1073741835, 0, 327642, -1610612725, 0, 327651, 11, 0, 327654, 11, 0, 327664, -2147483637, 0, 327668, 1073741835, 0, 327674, 11, 0, 393178, -1610612725, 0, 393188, 11, 0, 393189, 11, 0, 393200, -1610612725, 0, 393207, 1073741835, 0, 393208, 11, 0, 393209, 11, 0, 393211, 11, 0, 393212, 11, 0, 458717, -2147483637, 0, 458735, 1073741835, 0, 393229, 1073741835, 0, 393263, -2147483637, 0, 393268, -1610612725, 0, 458776, 11, 0, 458787, 11, 0, 589786, -1610612725, 0, 589812, 11, 0, 524297, 11, 0, 524332, 11, 0, 524343, 11, 0, 655322, -1610612725, 0, 655349, 11, 0, 655350, 11, 0, 655352, 11, 0, 655353, 11, 0, 720861, -2147483637, 0, 720878, 11, 0, 720879, 11, 0, 720880, 11, 0, 720882, 11, 0, 720883, 11, 0, 917478, 1073741835, 0, 983007, -2147483637, 0, 983011, -1610612725, 0, 917548, 1073741835, 0, 1048540, 1073741835, 0, 1048553, -2147483637, 0, 983089, -1610612725, 0, 1114169, -2147483637, 0, 1245158, 11, 0, 1179699, 1073741835, 0, 1179703, 11, 0, 1310684, 11, 0, 1310685, 11, 0, 1310686, 11, 0, 1310688, 11, 0, 1310689, 11, 0, 1310690, 11, 0, 1310691, 11, 0, 1310692, 11, 0, 1310693, 11, 0, 1310695, 11, 0, 1310696, 11, 0, 1310697, 11, 0, 1245228, 11, 0, 1310768, 11, 0, 1376262, 11, 0, 1376263, 11, 0, 1376264, 11, 0, 1376265, 11, 0, 1376271, 11, 0, 1376272, 11, 0, 1376279, 11, 0, 1376280, 11, 0, 1376281, 11, 0, 1572870, 1073741835, 0, 1703924, 1073741835, 0, 1703927, 1073741835, 0, 1769438, 1073741835, 0, 1769489, -2147483637, 0, 1769494, -1610612725, 0, 1769498, 11, 0, 1769505, 11, 0, 1769509, -2147483637, 0, 1900517, 1073741835, 0, 1835056, 1073741835, 0, 1966065, 11, 0, 1966074, 11, 0, 1900558, 11, 0, 2031585, 11, 0, 1966087, 11, 0, 1966109, 11, 0, 1966110, 11, 0, 1966124, 11, 0, 1966131, 11, 0, 2031658, 11, 0, 2031659, 11, 0, 2097201, 11, 0, 2097202, 11, 0, 2097204, 11, 0, 2097205, 11, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 56, 72 )

[node name="Camera" parent="." instance=ExtResource( 4 )]
zoom = Vector2( 0.5, 0.5 )
path_player = NodePath("../Player")

[node name="Powerup" parent="." instance=ExtResource( 5 )]
position = Vector2( 368, 104 )

[node name="Checkpoint" parent="." instance=ExtResource( 6 )]
position = Vector2( -16, 16 )

[node name="Checkpoint2" parent="." instance=ExtResource( 6 )]
position = Vector2( 344, 72 )

[node name="Checkpoint3" parent="." instance=ExtResource( 6 )]
position = Vector2( 144, 160 )

[node name="Checkpoint4" parent="." instance=ExtResource( 6 )]
position = Vector2( 152, 216 )

[node name="Checkpoint5" parent="." instance=ExtResource( 6 )]
position = Vector2( 376, 256 )

[node name="Checkpoint6" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 136 )

[node name="Checkpoint7" parent="." instance=ExtResource( 6 )]
position = Vector2( -80, 248 )

[node name="Checkpoint8" parent="." instance=ExtResource( 6 )]
position = Vector2( -176, 16 )

[node name="Checkpoint9" parent="." instance=ExtResource( 6 )]
position = Vector2( -288, 112 )

[node name="Checkpoint10" parent="." instance=ExtResource( 6 )]
position = Vector2( -80, 168 )

[node name="Door" parent="." instance=ExtResource( 7 )]
position = Vector2( 16, 8 )

[node name="Door2" parent="." instance=ExtResource( 7 )]
position = Vector2( 356, 192 )

[node name="Door3" parent="." instance=ExtResource( 7 )]
position = Vector2( 28, 224 )

[node name="Door4" parent="." instance=ExtResource( 7 )]
position = Vector2( -244, 104 )

[node name="Key" parent="." instance=ExtResource( 8 )]
position = Vector2( 406, 192 )

[node name="Key2" parent="." instance=ExtResource( 8 )]
position = Vector2( -278, 192 )

[node name="Key3" parent="." instance=ExtResource( 8 )]
position = Vector2( -296, 136 )

[node name="Collectible" parent="." instance=ExtResource( 9 )]
position = Vector2( 433, 8 )
item_id = 4

[node name="Collectible2" parent="." instance=ExtResource( 9 )]
position = Vector2( 371, 218 )
item_id = 1

[node name="Collectible3" parent="." instance=ExtResource( 9 )]
position = Vector2( 96, 128 )
item_id = 2

[node name="Collectible4" parent="." instance=ExtResource( 9 )]
position = Vector2( -106, 14 )
item_id = 3

[node name="Collectible5" parent="." instance=ExtResource( 9 )]
position = Vector2( 240, 80 )

[node name="Collectible6" parent="." instance=ExtResource( 9 )]
position = Vector2( -216, 64 )
item_id = 5

[node name="Collectible7" parent="." instance=ExtResource( 9 )]
position = Vector2( 240, 204 )
item_id = 6

[node name="Collectible8" parent="." instance=ExtResource( 9 )]
position = Vector2( -278, 224 )
item_id = 7

[node name="Duck" parent="." instance=ExtResource( 11 )]
position = Vector2( -400, 56 )
path_label = NodePath("../Label_Duck")

[node name="Label_Duck" type="Label" parent="."]
margin_left = -480.0
margin_top = 8.0
margin_right = -320.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 10 )
text = "ETERNITY DUCK APPROVES
OF YOUR RESOURCEFULNESS.
GO IN PEACE."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Ending" type="Label" parent="."]
visible = false
margin_left = -160.0
margin_top = 98.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 10 )
text = "CONGRATULATIONS!

YOUR TIME: TVAL
ITEMS COLLECTED: IVAL
YOU DIED DVAL TIMES.

THANK YOU FOR
PLAYING!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 12 )]

[node name="Audio_GetItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Audio_GetKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="collected" from="Powerup" to="." method="_on_Powerup_collected"]
[connection signal="reached" from="Checkpoint" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint2" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint3" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint4" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint5" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint6" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint7" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint8" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint9" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint10" to="." method="_on_Checkpoint_reached"]
[connection signal="reached" from="Checkpoint10" to="." method="_on_final_checkpoint_reached"]
[connection signal="collected" from="Key" to="." method="_on_Key_collected"]
[connection signal="collected" from="Key" to="Door2" method="unlock"]
[connection signal="collected" from="Key" to="Door3" method="unlock"]
[connection signal="collected" from="Key2" to="." method="_on_Key_collected"]
[connection signal="collected" from="Key2" to="Door" method="unlock"]
[connection signal="collected" from="Key3" to="." method="_on_Key_collected"]
[connection signal="collected" from="Key3" to="Door4" method="unlock"]
[connection signal="collected" from="Collectible" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible2" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible3" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible4" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible5" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible6" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible7" to="." method="_on_Collectible_collected"]
[connection signal="collected" from="Collectible8" to="." method="_on_Collectible_collected"]
